[package]
name = "axdd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.5.0"
dirs = "5.0.1"
env_logger = "0.10.1"
jrutils = {git = "https://github.com/jaypyles/jrutils"}
log = "0.4.20"

